// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`!code snapshot returns correct output 1`] = `
{
  "embeds": [
    {
      "color": 39423,
      "description": "Hey, here's some helpful tips on sharing your code with others!",
      "fields": [
        {
          "name": "Sharing Code on Discord",
          "value": "To write multiple lines of code with language syntax highlighting, use three backticks (<https://i.stack.imgur.com/ETTnT.jpg>), followed by the language.

\\\`\\\`\\\`js
[Put your JavaScript Code here!]
\\\`\\\`\\\`

For \`inline code\` use one backtick (no syntax highlighting):

\\\`Code here!\\\`
      ",
        },
        {
          "inline": true,
          "name": "Link a Code Sandbox to share Webpack/React examples",
          "value": "https://codesandbox.io/",
        },
        {
          "inline": true,
          "name": "Link a Repl.it to share Javascript/Ruby examples",
          "value": "https://replit.com/",
        },
        {
          "inline": true,
          "name": "Link a Codepen to share basic HTML/CSS/Javascript examples",
          "value": "https://codepen.io/",
        },
      ],
      "title": "HOW TO EMBED CODE SNIPPETS",
    },
  ],
}
`;

exports[`!code snapshot returns correct output 2`] = `
{
  "embeds": [
    {
      "color": 39423,
      "description": "Hey, <@1>, here's some helpful tips on sharing your code with others!",
      "fields": [
        {
          "name": "Sharing Code on Discord",
          "value": "To write multiple lines of code with language syntax highlighting, use three backticks (<https://i.stack.imgur.com/ETTnT.jpg>), followed by the language.

\\\`\\\`\\\`js
[Put your JavaScript Code here!]
\\\`\\\`\\\`

For \`inline code\` use one backtick (no syntax highlighting):

\\\`Code here!\\\`
      ",
        },
        {
          "inline": true,
          "name": "Link a Code Sandbox to share Webpack/React examples",
          "value": "https://codesandbox.io/",
        },
        {
          "inline": true,
          "name": "Link a Repl.it to share Javascript/Ruby examples",
          "value": "https://replit.com/",
        },
        {
          "inline": true,
          "name": "Link a Codepen to share basic HTML/CSS/Javascript examples",
          "value": "https://codepen.io/",
        },
      ],
      "title": "HOW TO EMBED CODE SNIPPETS",
    },
  ],
}
`;

exports[`!code snapshot returns correct output 3`] = `
{
  "embeds": [
    {
      "color": 39423,
      "description": "Hey, <@1> <@2>, here's some helpful tips on sharing your code with others!",
      "fields": [
        {
          "name": "Sharing Code on Discord",
          "value": "To write multiple lines of code with language syntax highlighting, use three backticks (<https://i.stack.imgur.com/ETTnT.jpg>), followed by the language.

\\\`\\\`\\\`js
[Put your JavaScript Code here!]
\\\`\\\`\\\`

For \`inline code\` use one backtick (no syntax highlighting):

\\\`Code here!\\\`
      ",
        },
        {
          "inline": true,
          "name": "Link a Code Sandbox to share Webpack/React examples",
          "value": "https://codesandbox.io/",
        },
        {
          "inline": true,
          "name": "Link a Repl.it to share Javascript/Ruby examples",
          "value": "https://replit.com/",
        },
        {
          "inline": true,
          "name": "Link a Codepen to share basic HTML/CSS/Javascript examples",
          "value": "https://codepen.io/",
        },
      ],
      "title": "HOW TO EMBED CODE SNIPPETS",
    },
  ],
}
`;

exports[`!code snapshot returns correct output 4`] = `
{
  "embeds": [
    {
      "color": 39423,
      "description": "Hey, <@1> <@2> <@3>, here's some helpful tips on sharing your code with others!",
      "fields": [
        {
          "name": "Sharing Code on Discord",
          "value": "To write multiple lines of code with language syntax highlighting, use three backticks (<https://i.stack.imgur.com/ETTnT.jpg>), followed by the language.

\\\`\\\`\\\`js
[Put your JavaScript Code here!]
\\\`\\\`\\\`

For \`inline code\` use one backtick (no syntax highlighting):

\\\`Code here!\\\`
      ",
        },
        {
          "inline": true,
          "name": "Link a Code Sandbox to share Webpack/React examples",
          "value": "https://codesandbox.io/",
        },
        {
          "inline": true,
          "name": "Link a Repl.it to share Javascript/Ruby examples",
          "value": "https://replit.com/",
        },
        {
          "inline": true,
          "name": "Link a Codepen to share basic HTML/CSS/Javascript examples",
          "value": "https://codepen.io/",
        },
      ],
      "title": "HOW TO EMBED CODE SNIPPETS",
    },
  ],
}
`;

exports[`!help snapshot should return the correct output 1`] = `
{
  "embeds": [
    {
      "color": 13407555,
      "description": "**By posting in this chatroom you agree to our [rules](https://www.theodinproject.com/guides/community/rules)** and our **[community expectations](https://www.theodinproject.com/guides/community/expectations)**.",
      "fields": [
        {
          "inline": true,
          "name": "Add Points",
          "value": "Give points to someone who has been helpful by mentioning their name 
 and adding ++ : 
 \`@username ++\` or by 
 giving them a star : \`@username :star:\`.",
        },
        {
          "inline": true,
          "name": "Leaderboard",
          "value": "View the points leaderboard with \`!leaderboard\`. 

 Modify it with \`n=\` and \`start=\` i.e. \`!leaderboard n=25 start=30\`.",
        },
        {
          "inline": true,
          "name": "Contribute to the bot",
          "value": "<https://github.com/TheOdinProject/odin-bot-v2>",
        },
      ],
      "title": "Help",
    },
  ],
}
`;
